fixed a bug where context menu would sometimes be partially offscreen

--- a/src/components/ContextMenu/index.scss
+++ b/src/components/ContextMenu/index.scss
@@ -2,7 +2,7 @@
   position: fixed;
   background: white;
   box-shadow: 0px 2px 10px #999999;
-  z-index: 5;
+  z-index: 100;
   text-align: left;
 
   &--option {
